# uedb

./: .gitignore  README.md  pyproject.toml
uedb/: database.db
uedb/api/: __init__.py  university.py
uedb/api/ingest/: __init__.py  team.py  university.py
uedb/api/management/: __init__.py  grouped_university.py
uedb/api/query/: __init__.py  university.py
uedb/api/rest/: __init__.py  grouped_university.py  team.py  university.py
uedb/core/: errors.py
uedb/db/: utils.py
uedb/db/model/: __init__.py  grouped_university.py  team.py  tournament.py  university.py
uedb/ingestion/: nse.py  nuel.py  protocols.py  protos.py  utils.py
uedb/uedb/: enums.py  errors.py
university_esports_db/: database.db  main.py
university_esports_db/api/: university.py
university_esports_db/db/: utils.py
university_esports_db/db/model/: __init__.py  team.py  tournament.py  university.py
